<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedMinder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="back">#c9c9c9</color>
    <string name="meida">Drugs Information</string>
    <string name="where">Where To Buy</string>
    <string name="email">Please Enter Your Email:</string>
    <string name="empty">Empty</string>
    <color name="Back2">#6495ed</color>
    <string name="about">About</string>
    <color name="black">#000000</color>
    <string name="about_menu"> 
        
    The Application was created 
    by Sergey Korchagin.
    Contact Us:
   </string>
    <string name="send">Send</string>
    <string name="email2">
            Send report to email</string>
    <string name="myDrugs">My Drugs</string>
    <string name="drugInfo">Drugs Info</string>
    <string name="addNewDrug">Add New Drug</string>
    <string name="repottEmail">Report to Email</string>
    <color name="white">#fffafa</color>
	<string name="emailMe"><![CDATA[medmindercont@gmail.com]]></string>
	<string name="exit">Exit</string>
	<string name="contact">Contact us</string>
	<string name="add">Add</string>
	<string name="Find">find</string>
	<string name="search">Search</string>
	<string name="newPharm">newPharm</string>
	<string name="superPharm">superPharm</string>
	<string name="medLink">medLink</string>
	<string name="maccabi">maccabi</string>
	<string name="set">Set</string>
	<string name="weekly">Weekly</string>
	<string name="monthly">Monthly</string>
	<string name="daily">Daily</string>
	
	
</resources>