<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddReminder" >

    <TextView
        android:id="@+id/alarmprompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startAlarm"
        android:layout_below="@+id/startAlarm"
        android:layout_marginTop="19dp"
        android:textColor="#000000" />

    <CheckBox
        android:id="@+id/Month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Week"
        android:layout_below="@+id/Week"
        android:text="@string/monthly" />

    <CheckBox
        android:id="@+id/Week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Dail"
        android:layout_below="@+id/Dail"
        android:text="@string/weekly" />

    <CheckBox
        android:id="@+id/Dail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmprompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/daily" />

    <TextView
        android:id="@+id/reminderDName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startAlarm"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/startAlarm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminderDName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/set" />

</RelativeLayout>
