<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whereToBuy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backpic"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WhereToBuy" >

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_marginLeft="32dp"
        android:background="@drawable/macabi"
        android:contentDescription="@string/maccabi"
        android:onClick="ClickListenerMa"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="54dp"
        android:layout_toRightOf="@+id/imageButton4"
        android:background="@drawable/newpharm"
        android:contentDescription="@string/newPharm"
        android:onClick="ClickListenerNP" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_below="@+id/imageButton2"
        android:layout_marginTop="68dp"
        android:background="@drawable/medlink"
        android:contentDescription="@string/medLink"
        android:onClick="ClickListenerMl" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton4"
        android:background="@drawable/superph"
        android:contentDescription="@string/superPharm"
        android:onClick="ClickListenerSP" />

</RelativeLayout>